fixed slider not taking full width on phone view and changed rates border on smaller views

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -56,6 +56,7 @@
     gap: 0.3rem;
     padding: 0 1rem;
     z-index: 3;
+    width: 100%;
 
     position: absolute;
     bottom: 270px;
